--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.0.1.min.js"></script>
+<!-- <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.0.1.min.js"></script> -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
